Clear API keys in .env file
Removed sensitive API keys from the .env file.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_API_KEY="AIzaSyBuy4Qz38Dtk_sbQyemYRR5xPNGCpqVQLY"
-GITHUB_TOKEN="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"
-OPENWEATHER_API_KEY='cc21bd51516bc6f994a52c42d691abd1'
+GOOGLE_API_KEY="-----"
+GITHUB_TOKEN="------"
+OPENWEATHER_API_KEY='--------'
